RESOLVED FIXED 240594
CSSMotionPathEnabled setting does not prevent parsing of CSS Motion Path properties
https://bugs.webkit.org/show_bug.cgi?id=240594
Summary CSSMotionPathEnabled setting does not prevent parsing of CSS Motion Path prop...
Antoine Quint
Reported 2022-05-18 13:07:16 PDT
Even with that flag off, the family of CSS Motion Path properties are parsed and accounted for during rendering. They should not.
Attachments
Radar WebKit Bug Importer
Comment 1 2022-05-18 13:09:03 PDT
Antoine Quint
Comment 2 2022-05-18 13:26:00 PDT
EWS
Comment 3 2022-05-19 23:52:08 PDT
Committed r294534 (250789@main): <https://commits.webkit.org/250789@main> Reviewed commits have been landed. Closing PR #743 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.