CSSMotionPathEnabled setting does not prevent parsing of CSS Motion Path properties https://bugs.webkit.org/show_bug.cgi?id=240594 <rdar://93522039>

Patch by Antoine Quint <graouts@apple.com> on 2022-05-19
Reviewed by Antti Koivisto.

* Source/WebCore/css/CSSComputedStyleDeclaration.cpp:
(WebCore::ComputedStyleExtractor::valueForPropertyInStyle):
* Source/WebCore/css/CSSProperties.json:
* Source/WebCore/css/parser/CSSParserContext.cpp:
(WebCore::operator==):
(WebCore::add):
(WebCore::CSSParserContext::isPropertyRuntimeDisabled const):
* Source/WebCore/css/parser/CSSParserContext.h:
* Source/WebCore/css/parser/CSSPropertyParser.cpp:
(WebCore::CSSPropertyParser::parseSingleValue):
(WebCore::CSSPropertyParser::parseShorthand):

Canonical link: https://commits.webkit.org/250789@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@294534 268f45cc-cd09-0410-ab3c-d52691b4dbfc